# TESSERA

./: .gitattributes  .gitignore  LICENSE  README.md  run.sh
.github/workflows/: ci.yml
cuda/: CMakeLists.txt  README.md
cuda/include/: linalg.hpp  mps.hpp
cuda/src/: ffi.cpp  linalg.cpp  mps.cpp
cuda/tests/: test_linalg.cpp  test_mps.cpp
docs/: ADR-0001-tessera.md  ADR-0002-pi-edge-validation.md
python/: README.md  gnn_guide.py  requirements-demo.txt  requirements.txt  tessera_cam.py  test_ffi.py  test_gnn.py
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: capi.rs  ffi.rs  ising.rs  lib.rs  quantum.rs  qubo.rs  schedule.rs
